test/parser/struct_instantiation_error.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
struct Color {
    r: int,
    g: int,
    b: int,
}

fn main() -> void {
    let err1 = Color {
        r: 0, 
        +,
        // CHECK: [[# @LINE -1 ]]:9: error: expected field initialization
        b: 2,
    };

    let x = 1;
}
// CHECK: StructDecl Color
// CHECK-NEXT:   FieldDecl:int r
// CHECK-NEXT:   FieldDecl:int g
// CHECK-NEXT:   FieldDecl:int b
// CHECK-NEXT: FunctionDecl main -> void
// CHECK-NEXT:   Block
// CHECK-NEXT:     DeclStmt
// CHECK-NEXT:       VarDecl: x
// CHECK-NEXT:         IntLiteral '1'
// CHECK-NOT: {{.*}}
